@@ -1,5 +1,10 @@
 2009-09-09  Miguel de Dios  <miguel.dedios@artica.es>
 
+	* include/functions_network_components.php: add bool param $localComponent
+	for to filter the tree when it's a local component.
+
+2009-09-09  Miguel de Dios  <miguel.dedios@artica.es>
+
 	* godmode/agentes/massive_edit_modules.php: add the last required field
 	(Export) in the form.
 	Fixes: 2848951
